--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.8",
     "axios-tauri-api-adapter": "^0.2.1",
     "colorthief": "^2.4.0",
+    "dompurify": "^3.1.0",
     "element-plus": "^2.7.0",
     "howler": "^2.2.4",
     "md5": "^2.3.0",
@@ -40,6 +41,7 @@
     "@antfu/eslint-config": "^2.15.0",
     "@iconify-json/carbon": "^1.1.31",
     "@tauri-apps/cli": "^1.5.11",
+    "@types/dompurify": "^3.0.5",
     "@types/howler": "^2.2.11",
     "@types/md5": "^2.3.5",
     "@types/node": "^20.12.7",
